Bug 1497059 - Bail out on empty dtRect. r=mstange

I thought it was going to be trivial to add a test-case for this with a scale
transform and such, but I haven't been able to.

This restores the wallpaper that there was before my change.

Differential Revision: https://phabricator.services.mozilla.com/D8000

--HG--
extra : moz-landing-system : lando